# chip

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: candidates.md  host-execution-contract.md  index.html  skill-to-chip.md  style.css
examples/: README.md
examples/bounded-recommendation/: README.md  chip.json
examples/bounded-recommendation/impl/: chip_impl.py
examples/bounded-recommendation/schemas/: materiality-finding.json  quiet-run.json  rec-state.json  recommendation-issued.json  research-recommendation.json
examples/circuits/: publication-triage.json
examples/publication-attention/: README.md  chip.json
examples/publication-attention/impl/: chip_impl.py
examples/publication-attention/schemas/: assessment-request.json  assessment-result.json  quiet-run.json  (+3 more)
spec/: CHANGELOG.md  chip-spec.md
src/chip/: __init__.py  authority.py  binding.py  candidates.py  circuit.py  datasheet.py  envelopes.py  environment.py  errors.py  evaluation.py  fixtures.py  lifecycle.py  manifest.py  payloads.py  receipts.py  state.py  taint.py  tainting.py  version.py
tests/: conftest.py  test_authority.py  test_binding.py  test_candidates.py  test_circuit.py  test_conformance.py  test_datasheet.py  test_envelopes.py  test_environment.py  test_evaluation.py  test_examples.py  test_fixtures.py  test_lifecycle.py  test_manifest.py  test_payloads.py  test_receipts.py  test_roundtrip.py  test_state.py  test_taint.py
(+13 files in other folders)
