[project]
name = "chipspec"
version = "0.2.0"
description = "chip — a contract for portable, versioned operational components (spec, validation, conformance kit)"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Marc Lavallee" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
jsonschema = ["jsonschema>=4"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/lavallee/chip"
Repository = "https://github.com/lavallee/chip"
Issues = "https://github.com/lavallee/chip/issues"
Changelog = "https://github.com/lavallee/chip/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chip"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "SIM105", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --import-mode=importlib"
